Fixed bug #45608 (closures don't work in static methods)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@263594 c90b9560-bf6c-de11-be94-00142212c4b1